@@ -16,6 +16,7 @@ require(lib.p.prot .. "recycling")
 require(lib.p.prot .. "resources")
 require(lib.p.prot .. "quality_enhancing_machines")
 require(lib.p.prot .. "recipe_qualities")
+require(lib.p.prot .. "tiles")
 require(lib.p.prot .. "items_and_entities")
 require(lib.p.prot .. "recipes_with_quality_upgrades")
 require(lib.p.prot .. "quality_enhancing_machine_programming")
