@@ -5,6 +5,7 @@ Date: ???
     - Quality bonuses for vehicle guns and inventory
     - Support for "smoke-with-trigger"
     - Simplify quality bonus application
+    - Support tiles
   Bug fixes:
     - Fixes for module definitions without slots
 ---------------------------------------------------------------------------------------------------
